--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Vector Database
 VECTOR_DB_URL=
 VECTOR_DB_API_KEY=
-VECTOR_DB_COLLECTION_NAME=chatesv
+VECTOR_DB_COLLECTION_NAME=revelationsai
 VECTOR_DB_COLLECTION_DIMENSIONS=1536
 
 # LLM
@@ -25,11 +25,11 @@ FACEBOOK_CLIENT_ID=
 FACEBOOK_CLIENT_SECRET=
 
 # Email Auth
-EMAIL_FROM=noreply@chatesv.com
+EMAIL_FROM=noreply@revelationsai.com
 EMAIL_SERVER_HOST=smtp.mailgun.org
 EMAIL_SERVER_PORT=587
-EMAIL_SERVER_USERNAME=postmaster@chatesv.com
+EMAIL_SERVER_USERNAME=postmaster@revelationsai.com
 EMAIL_SERVER_PASSWORD=
 
 # Admin User
-ADMIN_EMAIL=admin@chatesv.com
+ADMIN_EMAIL=admin@revelationsai.com
