--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -8,15 +8,15 @@ INDEX_FILE_BUCKET=
 # Database
 DATABASE_RESOURCE_ARN=
 DATABASE_SECRET_ARN=
-DATABASE_NAME=chatesv
+DATABASE_NAME=revelationsai
 # Set this to true if you want to use a local database with the given DATABASE_URL
 IS_LOCAL=false
-DATABASE_URL=postgresql://chatesv:chatesv@localhost:5432/chatesv
+DATABASE_URL=postgresql://revelationsai:revelationsai@localhost:5432/revelationsai
 
 # Vector Database
 VECTOR_DB_URL=
 VECTOR_DB_API_KEY=
-VECTOR_DB_COLLECTION_NAME=chatesv
+VECTOR_DB_COLLECTION_NAME=revelationsai
 VECTOR_DB_COLLECTION_DIMENSIONS=1536
 
 # LLM
@@ -41,11 +41,11 @@ FACEBOOK_CLIENT_ID=
 FACEBOOK_CLIENT_SECRET=
 
 # Email Auth
-EMAIL_FROM=noreply@chatesv.com
+EMAIL_FROM=noreply@revelationsai.com
 EMAIL_SERVER_HOST=smtp.mailgun.org
 EMAIL_SERVER_PORT=587
-EMAIL_SERVER_USERNAME=postmaster@chatesv.com
+EMAIL_SERVER_USERNAME=postmaster@revelationsai.com
 EMAIL_SERVER_PASSWORD=
 
 # Admin User
-ADMIN_EMAIL=admin@chatesv.com
+ADMIN_EMAIL=admin@revelationsai.com
