--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@chatesv/web",
+  "name": "@revelationsai/web",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chatesv/core": "*",
+    "@revelationsai/core": "*",
     "@qdrant/js-client-rest": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "ai": "^2.1.20",
