--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -1,6 +1,6 @@
 # Public Vars
 NEXT_PUBLIC_WEBSITE_URL=
-NEXT_PUBLIC_SCRAPER_API_URL=
+NEXT_PUBLIC_API_URL=
 
 # S3
 INDEX_FILE_BUCKET=
@@ -27,10 +27,6 @@ LLM_TEMPERATURE=0.7
 
 # Unstructured
 UNSTRUCTURED_API_KEY=
-
-# Next Auth
-NEXTAUTH_URL=${NEXT_PUBLIC_WEBSITE_URL}
-NEXTAUTH_SECRET=
 
 # Google Auth
 GOOGLE_CLIENT_ID=
