--- a/packages/functions/tsconfig.json
+++ b/packages/functions/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "typeRoots": ["./src/types", "../core/src/types"],
     "lib": ["dom", "dom.iterable", "ES2021"],
-    "moduleResolution": "Node",
+    "moduleResolution": "node",
     "paths": {
       "@core/configs/*": ["../core/src/configs/*"],
       "@core/configs": ["../core/src/configs"],
