Adding some stuff for email

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ FACEBOOK_CLIENT_SECRET=
 
 # Email Auth
 EMAIL_FROM=noreply@revelationsai.com
+EMAIL_REPLY_TO=admin@revelationsai.com
 EMAIL_SERVER_HOST=smtp.mailgun.org
 EMAIL_SERVER_PORT=587
 EMAIL_SERVER_USERNAME=postmaster@revelationsai.com
