--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -30,6 +30,7 @@ UNSTRUCTURED_API_KEY=
 
 # Email Auth
 EMAIL_FROM=noreply@revelationsai.com
+EMAIL_REPLY_TO=admin@revelationsai.com
 EMAIL_SERVER_HOST=smtp.mailgun.org
 EMAIL_SERVER_PORT=587
 EMAIL_SERVER_USERNAME=postmaster@revelationsai.com
