--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -18,12 +18,12 @@
     "@revelationsai/core": "*",
     "@sparticuz/chromium": "^114.0.0",
     "busboy": "^1.6.0",
-    "chrome-aws-lambda": "^10.1.0",
     "fast-xml-parser": "^4.2.5",
-    "langchain": "^0.0.109",
+    "langchain": "^0.0.112",
     "mammoth": "^1.6.0",
     "nodemailer": "^6.9.3",
     "pdf-parse": "^1.1.1",
-    "puppeteer": "^19.7.2"
+    "puppeteer": "^20.8.3",
+    "puppeteer-core": "^20.8.3"
   }
 }
