Still trying to fix the chrome layer

--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -11,7 +11,6 @@
     "@types/busboy": "^1.5.0",
     "@types/node": "^20.4.2",
     "@types/nodemailer": "^6.4.8",
-    "@sparticuz/chromium": "^114.0.0",
     "sst": "^2.22.1",
     "vitest": "^0.33.0"
   },
@@ -23,6 +22,7 @@
     "mammoth": "^1.6.0",
     "nodemailer": "^6.9.3",
     "pdf-parse": "^1.1.1",
-    "puppeteer": "^20.8.3"
+    "puppeteer-core": "^20.7.2",
+    "@sparticuz/chromium": "^114.0.0"
   }
 }
