--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -7,6 +7,7 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
+    "@sparticuz/chromium": "^114.0.0",
     "@types/aws-lambda": "^8.10.119",
     "@types/busboy": "^1.5.0",
     "@types/node": "^20.4.2",
@@ -15,14 +16,15 @@
     "vitest": "^0.33.0"
   },
   "dependencies": {
+    "@middy/core": "^4.5.5",
     "@revelationsai/core": "*",
+    "ai": "^2.1.22",
     "busboy": "^1.6.0",
     "fast-xml-parser": "^4.2.5",
     "langchain": "^0.0.112",
     "mammoth": "^1.6.0",
     "nodemailer": "^6.9.3",
     "pdf-parse": "^1.1.1",
-    "puppeteer-core": "^20.7.2",
-    "@sparticuz/chromium": "^114.0.0"
+    "puppeteer-core": "^20.7.2"
   }
 }
