--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,9 @@ VECTOR_DB_COLLECTION_DIMENSIONS=1536
 
 # LLM
 LLM_API_KEY=
-LLM_MODEL_NAME=gpt-3.5-turbo
+LLM_MODEL_NAME=gpt-3.5-turbo-16k
 LLM_EMBEDDINGS_MODEL_NAME=text-embedding-ada-002
-LLM_TEMPERATURE=0.7
+LLM_TEMPERATURE=1.0
 
 # Unstructured
 UNSTRUCTURED_API_KEY=
