--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -25,6 +25,7 @@
     "mammoth": "^1.6.0",
     "nodemailer": "^6.9.3",
     "pdf-parse": "^1.1.1",
-    "puppeteer-core": "^20.7.2"
+    "puppeteer-core": "^20.7.2",
+    "stripe": "^12.16.0"
   }
 }
