--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -33,6 +33,7 @@
     "react-textarea-autosize": "^8.5.2",
     "remark": "^14.0.3",
     "remark-gfm": "^3.0.1",
+    "stripe": "^12.16.0",
     "swr": "^2.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
