--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@tsconfig/node16": "^16.1.0",
     "@types/node": "^20.4.2",
     "@types/pg": "^8.10.2",
-    "aws-cdk-lib": "2.84.0",
+    "aws-cdk-lib": "^2.89.0",
     "constructs": "10.1.156",
-    "drizzle-kit": "^0.19.5",
-    "sst": "^2.22.1",
+    "drizzle-kit": "^0.19.12",
+    "sst": "^2.22.10",
     "typescript": "^5.1.6"
   },
   "dependencies": {
@@ -28,7 +28,7 @@
     "@aws-sdk/credential-providers": "^3.370.0",
     "drizzle-orm": "^0.27.2",
     "drizzle-zod": "^0.4.4",
-    "pg": "^8.11.1",
+    "pg": "^8.11.2",
     "postgres": "^3.3.5",
     "zod": "^3.21.4"
   },
