--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@aws-sdk/client-s3": "^3.379.1",
     "@aws-sdk/client-sqs": "^3.379.1",
     "@aws-sdk/credential-providers": "^3.379.1",
+    "@neondatabase/serverless": "^0.5.6",
     "drizzle-orm": "^0.27.2",
     "drizzle-zod": "^0.4.4",
     "pg": "^8.11.2",
