--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -6,12 +6,8 @@ NEXT_PUBLIC_API_URL=
 INDEX_FILE_BUCKET=
 
 # Database
-DATABASE_RESOURCE_ARN=
-DATABASE_SECRET_ARN=
-DATABASE_NAME=revelationsai
-# Set this to true if you want to use a local database with the given DATABASE_URL
 IS_LOCAL=false
-DATABASE_URL=postgresql://revelationsai:revelationsai@localhost:5432/revelationsai
+DATABASE_URL=
 
 # Vector Database
 VECTOR_DB_URL=
