--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@aws-sdk/client-rds-data": "^3.379.1",
     "@aws-sdk/client-s3": "^3.379.1",
     "@aws-sdk/client-sqs": "^3.379.1",
     "@aws-sdk/credential-providers": "^3.379.1",
     "@neondatabase/serverless": "^0.5.6",
     "drizzle-orm": "^0.27.2",
     "drizzle-zod": "^0.4.4",
+    "langchain": "^0.0.121",
     "pg": "^8.11.2",
     "postgres": "^3.3.5",
+    "typeorm": "^0.3.17",
     "zod": "^3.21.4"
   },
   "workspaces": [
