--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,9 +12,7 @@
     "vitest": "^0.33.0"
   },
   "dependencies": {
-    "@qdrant/js-client-rest": "^1.3.0",
     "axios": "^1.4.0",
-    "axios-retry": "^3.5.1",
-    "langchain": "^0.0.112"
+    "axios-retry": "^3.5.1"
   }
 }
