Adding DALL-E images to devotions

--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -4,6 +4,7 @@ NEXT_PUBLIC_API_URL=
 
 # S3
 INDEX_FILE_BUCKET=
+DEVOTION_IMAGE_BUCKET=
 
 # Database
 IS_LOCAL=false
@@ -15,7 +16,8 @@ VECTOR_DB_COLLECTION_NAME=revelationsai
 
 # LLM
 LLM_API_KEY=
-LLM_MODEL_NAME=gpt-3.5-turbo
+LLM_PROMPT_MODEL_NAME=gpt-3.5-turbo
+LLM_COMPLETIONS_MODEL_NAME=gpt-3.5-turbo-16k
 LLM_EMBEDDINGS_MODEL_NAME=text-embedding-ada-002
 LLM_TEMPERATURE=0.7
 
