--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Local development
+IS_LOCAL=false
+
 # Database (Neon)
 DATABASE_URL=
 
@@ -7,7 +10,8 @@ VECTOR_DB_COLLECTION_NAME=revelationsai
 
 # LLM
 LLM_API_KEY=
-LLM_MODEL_NAME=gpt-3.5-turbo-16k
+LLM_PROMPT_MODEL_NAME=gpt-3.5-turbo
+LLM_COMPLETIONS_MODEL_NAME=gpt-3.5-turbo-16k
 LLM_EMBEDDINGS_MODEL_NAME=text-embedding-ada-002
 LLM_TEMPERATURE=1.0
 
