--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "axios-retry": "^3.5.1"
+    "axios-retry": "^3.5.1",
+    "openai": "^3.3.0"
   }
 }
