--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -27,5 +27,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
-      - run: npm install
-      - run: npm run deploy prod
+      - name: Install dependencies
+        run: npm ci
+      - name: Install SST
+        run: npm i sst
+      - name: Deploy
+        run: npm run deploy prod
