--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -2,11 +2,8 @@ name: Production deployment
 concurrency: prod
 on:
   push:
-    branches:
-      - master
+    branches: [master]
 env:
-  IS_LOCAL: false
-  NODE_ENV: production
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -28,7 +25,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
+          cache: 'npm'
       - name: Install Node.js dependencies
         run: npm ci
       - name: Deploy
-        run: npx sst deploy --stage prod
+        run: npm run deploy prod
