--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -21,6 +21,7 @@
     "ai": "^2.1.22",
     "busboy": "^1.6.0",
     "fast-xml-parser": "^4.2.5",
+    "lambda-stream": "^0.5.0",
     "mammoth": "^1.6.0",
     "nodemailer": "^6.9.3",
     "pdf-parse": "^1.1.1",
