Adding replicate images to devotion generation

--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -19,6 +19,9 @@ env:
   LLM_EMBEDDINGS_MODEL_NAME: ${{ vars.LLM_EMBEDDINGS_MODEL_NAME }}
   LLM_TEMPERATURE: ${{ vars.LLM_TEMPERATURE }}
 
+  REPLICATE_API_KEY: ${{ secrets.REPLICATE_API_KEY }}
+  REPLICATE_IMAGE_MODEL: ${{ vars.REPLICATE_IMAGE_MODEL }}
+
   UNSTRUCTURED_API_KEY: ${{ secrets.UNSTRUCTURED_API_KEY }}
 
   GOOGLE_CLIENT_ID: ${{ vars.GOOGLE_CLIENT_ID }}
