--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "langchain": "^0.0.121",
     "pg": "^8.11.2",
     "postgres": "^3.3.5",
+    "replicate": "^0.12.3",
     "typeorm": "^0.3.17",
     "zod": "^3.21.4"
   },
