--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,6 +7,7 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
+    "@types/email-templates": "^10.0.1",
     "@types/node": "^20.4.2",
     "sst": "^2.22.1",
     "vitest": "^0.33.0"
@@ -14,6 +15,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "axios-retry": "^3.5.1",
+    "nodemailer": "^6.9.4",
     "openai": "^3.3.0"
   }
 }
