--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,19 +11,19 @@
   "dependencies": {
     "@ctrl/react-adsense": "^1.7.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@revelationsai/core": "*",
-    "ai": "^2.1.20",
+    "@revelationsai/core": "^1.0.0",
+    "ai": "^2.1.32",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "axios-retry": "^3.5.1",
+    "axios-retry": "^3.6.0",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
-    "fast-xml-parser": "^4.2.5",
+    "fast-xml-parser": "^4.2.7",
     "lucide-react": "^0.261.0",
     "moment": "^2.29.4",
     "next": "13.4.8",
-    "nodemailer": "^6.9.3",
+    "nodemailer": "^6.9.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,7 +32,7 @@
     "react-textarea-autosize": "^8.5.2",
     "remark": "^14.0.3",
     "remark-gfm": "^3.0.1",
-    "stripe": "^12.16.0",
+    "stripe": "^12.17.0",
     "swr": "^2.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
@@ -44,7 +44,7 @@
     "@types/react-dom": "18.2.6",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
-    "sst": "^2.22.1",
+    "sst": "^2.23.15",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
