--- a/package.json
+++ b/package.json
@@ -13,28 +13,36 @@
   },
   "devDependencies": {
     "@tsconfig/node16": "^16.1.0",
-    "@types/node": "^20.4.5",
+    "@types/node": "^20.4.9",
     "@types/pg": "^8.10.2",
-    "aws-cdk-lib": "^2.89.0",
-    "constructs": "10.1.156",
+    "aws-cdk-lib": "^2.90.0",
+    "constructs": "^10.2.69",
     "drizzle-kit": "^0.19.12",
-    "sst": "^2.22.10",
+    "sst": "^2.23.15",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.383.0",
-    "@aws-sdk/client-sqs": "^3.382.0",
-    "@aws-sdk/credential-providers": "^3.382.0",
-    "@aws-sdk/s3-request-presigner": "^3.383.0",
-    "@neondatabase/serverless": "^0.5.6",
-    "drizzle-orm": "^0.27.2",
-    "drizzle-zod": "^0.4.4",
-    "langchain": "^0.0.121",
+    "@aws-sdk/client-s3": "^3.388.0",
+    "@aws-sdk/client-sqs": "^3.388.0",
+    "@aws-sdk/credential-providers": "^3.388.0",
+    "@aws-sdk/s3-request-presigner": "^3.388.0",
+    "@neondatabase/serverless": "^0.5.7",
+    "drizzle-orm": "^0.28.1",
+    "drizzle-zod": "^0.5.0",
+    "langchain": "^0.0.125",
     "pg": "^8.11.2",
     "postgres": "^3.3.5",
-    "replicate": "^0.12.3",
+    "replicate": "^0.16.0",
     "typeorm": "^0.3.17",
     "zod": "^3.21.4"
+  },
+  "overrides": {
+    "langchain": {
+      "replicate": "$replicate"
+    },
+    "sst": {
+      "aws-cdk-lib": "$aws-cdk-lib"
+    }
   },
   "workspaces": [
     "packages/*"
