--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -10,22 +10,22 @@
     "@sparticuz/chromium": "^114.0.0",
     "@types/aws-lambda": "^8.10.119",
     "@types/busboy": "^1.5.0",
-    "@types/node": "^20.4.2",
-    "@types/nodemailer": "^6.4.8",
-    "sst": "^2.22.1",
+    "@types/node": "^20.4.9",
+    "@types/nodemailer": "^6.4.9",
+    "sst": "^2.23.15",
     "vitest": "^0.33.0"
   },
   "dependencies": {
-    "@middy/core": "^4.5.5",
-    "@revelationsai/core": "*",
-    "ai": "^2.1.22",
+    "@middy/core": "^4.6.0",
+    "@revelationsai/core": "^1.0.0",
+    "ai": "^2.1.32",
     "busboy": "^1.6.0",
     "escape-string-regexp": "^5.0.0",
-    "fast-xml-parser": "^4.2.5",
+    "fast-xml-parser": "^4.2.7",
     "lambda-stream": "^0.5.0",
     "mammoth": "^1.6.0",
     "pdf-parse": "^1.1.1",
-    "puppeteer-core": "^20.7.2",
-    "stripe": "^12.16.0"
+    "puppeteer-core": "^20.9.0",
+    "stripe": "^12.17.0"
   }
 }
