Adding read and write endpoints to gh actions

--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -8,9 +8,11 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-  DATABASE_URL: ${{ secrets.DATABASE_URL }}
+  DATABASE_READ_URL: ${{ secrets.DATABASE_READ_URL }}
+  DATABASE_WRITE_URL: ${{ secrets.DATABASE_WRITE_URL }}
 
-  VECTOR_DB_URL: ${{ secrets.VECTOR_DB_URL }}
+  VECTOR_DB_READ_URL: ${{ secrets.VECTOR_DB_READ_URL }}
+  VECTOR_DB_WRITE_URL: ${{ secrets.VECTOR_DB_WRITE_URL }}
   VECTOR_DB_COLLECTION_NAME: ${{ vars.VECTOR_DB_COLLECTION_NAME }}
 
   LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
