--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -17,7 +17,9 @@ DATABASE_WRITE_URL=
 VECTOR_DB_URL=
 VECTOR_DB_READ_URL=
 VECTOR_DB_WRITE_URL=
-VECTOR_DB_COLLECTION_NAME=revelationsai
+VECTOR_DB_TABLE_NAME=revelationsai
+VECTOR_DB_DIMENSIONS=1536
+# ^ Must match embedding model below
 
 # LLM
 LLM_API_KEY=
