Trying to fix neon connection issues

--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -13,7 +13,8 @@ env:
 
   VECTOR_DB_READ_URL: ${{ secrets.VECTOR_DB_READ_URL }}
   VECTOR_DB_WRITE_URL: ${{ secrets.VECTOR_DB_WRITE_URL }}
-  VECTOR_DB_COLLECTION_NAME: ${{ vars.VECTOR_DB_COLLECTION_NAME }}
+  VECTOR_DB_TABLE_NAME: ${{ vars.VECTOR_DB_TABLE_NAME }}
+  VECTOR_DB_DIMENSIONS: ${{ vars.VECTOR_DB_DIMENSIONS }}
 
   LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
   LLM_PROMPT_MODEL_NAME: ${{ vars.LLM_PROMPT_MODEL_NAME }}
