Renaming page content column name to be better for sql

--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,9 @@ DATABASE_WRITE_URL=
 VECTOR_DB_URL=
 VECTOR_DB_READ_URL=
 VECTOR_DB_WRITE_URL=
-VECTOR_DB_TABLE_NAME=revelationsai
-VECTOR_DB_DIMENSIONS=1536
-# ^ Must match embedding model below
+# Table for document embeddings (dimensions must match the model)
+VECTOR_DB_DOCS_TABLE=documents
+VECTOR_DB_DOCS_DIMENSIONS=1536
 
 # LLM
 LLM_API_KEY=
