--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -13,8 +13,8 @@ env:
 
   VECTOR_DB_READ_URL: ${{ secrets.VECTOR_DB_READ_URL }}
   VECTOR_DB_WRITE_URL: ${{ secrets.VECTOR_DB_WRITE_URL }}
-  VECTOR_DB_TABLE_NAME: ${{ vars.VECTOR_DB_TABLE_NAME }}
-  VECTOR_DB_DIMENSIONS: ${{ vars.VECTOR_DB_DIMENSIONS }}
+  VECTOR_DB_DOCS_TABLE: ${{ vars.VECTOR_DB_DOCS_TABLE }}
+  VECTOR_DB_DOCS_DIMENSIONS: ${{ vars.VECTOR_DB_DIMENSIONS }}
 
   LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
   LLM_PROMPT_MODEL_NAME: ${{ vars.LLM_PROMPT_MODEL_NAME }}
