--- a/.env.example
+++ b/.env.example
@@ -2,27 +2,18 @@
 IS_LOCAL=true
 WEBSITE_URL=http://localhost:3000
 
-# Database (Neon)
-# You can just supply database url here, or you can supply DATABASE_READ_URL and DATABASE_WRITE_URL separately
-DATABASE_URL=
-DATABASE_READ_URL=
-DATABASE_WRITE_URL=
-
-# Vector Database
-# Same as above, you can supply VECTOR_DB_URL or VECTOR_DB_READ_URL and VECTOR_DB_WRITE_URL separately
-VECTOR_DB_URL=
-VECTOR_DB_READ_URL=
-VECTOR_DB_WRITE_URL=
-# Table for document embeddings (dimensions must match the model)
+# Neon Database
+NEON_API_KEY=
+# Vector DB Table for document embeddings (dimensions must match the model)
 VECTOR_DB_DOCS_TABLE=documents
 VECTOR_DB_DOCS_DIMENSIONS=1536
 
 # LLM
 LLM_API_KEY=
 LLM_PROMPT_MODEL_NAME=gpt-3.5-turbo
+LLM_CHAT_MODEL_NAME=gpt-3.5-turbo
 LLM_COMPLETIONS_MODEL_NAME=gpt-3.5-turbo-16k
 LLM_EMBEDDINGS_MODEL_NAME=text-embedding-ada-002
-LLM_TEMPERATURE=1.0
 
 # Replicate AI
 REPLICATE_API_KEY=
