--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -24,9 +24,9 @@ VECTOR_DB_DOCS_DIMENSIONS=1536
 # LLM
 LLM_API_KEY=
 LLM_PROMPT_MODEL_NAME=gpt-3.5-turbo
+LLM_CHAT_MODEL_NAME=gpt-3.5-turbo
 LLM_COMPLETIONS_MODEL_NAME=gpt-3.5-turbo-16k
 LLM_EMBEDDINGS_MODEL_NAME=text-embedding-ada-002
-LLM_TEMPERATURE=0.7
 
 # Replicate AI
 REPLICATE_API_KEY=
