--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -6,17 +6,15 @@ NEXT_PUBLIC_API_URL=
 INDEX_FILE_BUCKET=
 DEVOTION_IMAGE_BUCKET=
 
-# Database (Neon)
-# You can just supply database url here, or you can supply DATABASE_READ_URL and DATABASE_WRITE_URL separately
+# Neon Database
+NEON_API_KEY=
 DATABASE_URL=
-DATABASE_READ_URL=
-DATABASE_WRITE_URL=
-
+DATABASE_READWRITE_URL=
+DATABASE_READONLY_URL=
 # Vector Database
-# Same as above, you can supply VECTOR_DB_URL or VECTOR_DB_READ_URL and VECTOR_DB_WRITE_URL separately
 VECTOR_DB_URL=
-VECTOR_DB_READ_URL=
-VECTOR_DB_WRITE_URL=
+VECTOR_DB_READWRITE_URL=
+VECTOR_DB_READONLY_URL=
 # Table for document embeddings (dimensions must match the model)
 VECTOR_DB_DOCS_TABLE=documents
 VECTOR_DB_DOCS_DIMENSIONS=1536
