--- a/.github/workflows/pr-preview.yaml
+++ b/.github/workflows/pr-preview.yaml
@@ -60,7 +60,7 @@ jobs:
         run: npm ci
       - id: deploy
         name: Deploy to AWS
-        run: npm run deploy pr-${{ github.event.pull_request.number }} >> $GITHUB_OUTPUT
+        run: npm run deploy pr-${{ github.event.pull_request.number }}
       - id: comment
         name: Add comment to PR
         uses: actions/github-script@v4
