--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -1,18 +1,20 @@
 # Public Vars
 NEXT_PUBLIC_WEBSITE_URL=
 NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_CHAT_API_URL=
 
 # S3
 INDEX_FILE_BUCKET=
 DEVOTION_IMAGE_BUCKET=
 
-# Neon Database
+# Neon
 NEON_API_KEY=
-DATABASE_URL=
+
+# Database
 DATABASE_READWRITE_URL=
 DATABASE_READONLY_URL=
+
 # Vector Database
-VECTOR_DB_URL=
 VECTOR_DB_READWRITE_URL=
 VECTOR_DB_READONLY_URL=
 # Table for document embeddings (dimensions must match the model)
