--- a/package.json
+++ b/package.json
@@ -14,22 +14,22 @@
   "devDependencies": {
     "@tsconfig/node16": "^16.1.0",
     "@types/cfn-response": "^1.0.5",
-    "@types/node": "^20.4.9",
+    "@types/node": "^20.4.10",
     "@types/pg": "^8.10.2",
-    "aws-cdk-lib": "2.84.0",
-    "constructs": "10.1.156",
+    "aws-cdk-lib": "^2.91.0",
+    "constructs": "^10.2.69",
     "drizzle-kit": "^0.19.12",
-    "sst": "^2.23.15",
+    "sst": "^2.24.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.388.0",
     "@aws-sdk/client-sqs": "^3.388.0",
-    "@aws-sdk/credential-providers": "^3.388.0",
+    "@aws-sdk/credential-providers": "^3.389.0",
     "@aws-sdk/s3-request-presigner": "^3.388.0",
     "@neondatabase/serverless": "^0.5.7",
     "cfn-response": "^1.0.1",
-    "drizzle-orm": "^0.28.1",
+    "drizzle-orm": "^0.28.2",
     "drizzle-zod": "^0.5.0",
     "langchain": "^0.0.125",
     "neon-sdk": "^1.10.0",
