--- a/.github/workflows/pr-preview.yaml
+++ b/.github/workflows/pr-preview.yaml
@@ -64,13 +64,7 @@ jobs:
         run: npx sst deploy --stage pr-${{ github.event.pull_request.number }}
       - id: comment
         name: Add comment to PR
-        uses: actions/github-script@v4
+        uses: thollander/actions-comment-pull-request@v2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            github.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: 'Check out the preview environment ${{ steps.deploy.outputs.WebsiteUrl }}'
-            })
+          message: |
+            Check out the preview environment ${{ steps.deploy.outputs.WebsiteUrl }}
