I think I have things stabilized now

--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,10 @@ NEON_API_KEY=
 VECTOR_DB_DOCS_TABLE=documents
 VECTOR_DB_DOCS_DIMENSIONS=1536
 
+# OpenAI
+OPENAI_API_KEY=
+
 # LLM
-LLM_API_KEY=
 LLM_PROMPT_MODEL_NAME=gpt-3.5-turbo
 LLM_CHAT_MODEL_NAME=gpt-3.5-turbo
 LLM_COMPLETIONS_MODEL_NAME=gpt-3.5-turbo-16k
