--- a/.github/workflows/pr-preview-cleanup.yaml
+++ b/.github/workflows/pr-preview-cleanup.yaml
@@ -14,8 +14,10 @@ env:
   VECTOR_DB_DOCS_TABLE: ${{ vars.VECTOR_DB_DOCS_TABLE }}
   VECTOR_DB_DOCS_DIMENSIONS: ${{ vars.VECTOR_DB_DOCS_DIMENSIONS }}
 
-  LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
+  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
   LLM_PROMPT_MODEL_NAME: ${{ vars.LLM_PROMPT_MODEL_NAME }}
+  LLM_CHAT_MODEL_NAME: ${{ vars.LLM_CHAT_MODEL_NAME }}
   LLM_COMPLETIONS_MODEL_NAME: ${{ vars.LLM_COMPLETIONS_MODEL_NAME }}
   LLM_EMBEDDINGS_MODEL_NAME: ${{ vars.LLM_EMBEDDINGS_MODEL_NAME }}
   LLM_TEMPERATURE: ${{ vars.LLM_TEMPERATURE }}
