--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@sparticuz/chromium": "^114.0.0",
     "@types/aws-lambda": "^8.10.119",
+    "@types/bcrypt": "^5.0.0",
     "@types/busboy": "^1.5.0",
     "@types/node": "^20.4.10",
     "@types/nodemailer": "^6.4.9",
@@ -19,11 +20,14 @@
     "@middy/core": "^4.6.0",
     "@revelationsai/core": "*",
     "ai": "^2.1.33",
+    "bcrypt": "^5.1.1",
     "busboy": "^1.6.0",
     "escape-string-regexp": "^5.0.0",
     "fast-xml-parser": "^4.2.7",
     "lambda-stream": "^0.5.0",
     "mammoth": "^1.6.0",
+    "mock-aws-s3": "^4.0.2",
+    "nock": "^13.3.3",
     "openai": "^4.0.0",
     "pdf-parse": "^1.1.1",
     "puppeteer-core": "^20.9.0",
