--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -40,6 +40,7 @@ env:
   EMAIL_SERVER_PASSWORD: ${{ secrets.EMAIL_SERVER_PASSWORD }}
 
   ADMIN_EMAIL: ${{ vars.ADMIN_EMAIL }}
+  ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
 
   STRIPE_PUBLIC_KEY: ${{ vars.STRIPE_PUBLIC_KEY }}
   STRIPE_API_KEY: ${{ secrets.STRIPE_API_KEY }}
