--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@tsconfig/node16/tsconfig.json",
-  "exclude": ["packages"],
+  "exclude": ["./packages/**", "./node_modules/**"],
   "compilerOptions": {
     "moduleResolution": "Node",
     "paths": {
