--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -22,13 +22,16 @@
     "ai": "^2.1.33",
     "bcryptjs": "^2.4.3",
     "busboy": "^1.6.0",
+    "email-templates": "^11.1.1",
     "escape-string-regexp": "^5.0.0",
     "fast-xml-parser": "^4.2.7",
     "lambda-stream": "^0.5.0",
     "mammoth": "^1.6.0",
     "openai": "^4.0.0",
     "pdf-parse": "^1.1.1",
+    "pug": "^3.0.2",
     "puppeteer-core": "^20.9.0",
-    "stripe": "^12.18.0"
+    "stripe": "^12.18.0",
+    "validator": "^13.11.0"
   }
 }
