--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -7,6 +7,8 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/preset-typescript": "^7.22.5",
     "@sparticuz/chromium": "^114.0.0",
     "@types/aws-lambda": "^8.10.119",
     "@types/bcryptjs": "^2.4.2",
@@ -22,7 +24,6 @@
     "ai": "^2.1.33",
     "bcryptjs": "^2.4.3",
     "busboy": "^1.6.0",
-    "email-templates": "^11.1.1",
     "escape-string-regexp": "^5.0.0",
     "fast-xml-parser": "^4.2.7",
     "lambda-stream": "^0.5.0",
