--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -13,22 +13,22 @@
     "@types/aws-lambda": "^8.10.119",
     "@types/bcryptjs": "^2.4.2",
     "@types/busboy": "^1.5.0",
-    "@types/node": "^20.4.10",
+    "@types/node": "^20.5.1",
     "@types/nodemailer": "^6.4.9",
     "sst": "^2.22.10",
     "vitest": "^0.33.0"
   },
   "dependencies": {
     "@middy/core": "^4.6.0",
-    "@revelationsai/core": "*",
-    "ai": "^2.1.33",
+    "@revelationsai/core": "^1.0.0",
+    "ai": "^2.2.7",
     "bcryptjs": "^2.4.3",
     "busboy": "^1.6.0",
     "escape-string-regexp": "^5.0.0",
     "fast-xml-parser": "^4.2.7",
     "lambda-stream": "^0.5.0",
     "mammoth": "^1.6.0",
-    "openai": "^4.0.0",
+    "openai": "^4.0.1",
     "pdf-parse": "^1.1.1",
     "pug": "^3.0.2",
     "puppeteer-core": "^20.9.0",
