--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -22,7 +22,7 @@
 		"autoprefixer": "^10.4.15",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
-		"eslint": "^8.28.0",
+		"eslint": "^8.47.0",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-svelte": "^2.32.4",
 		"postcss": "^8.4.28",
@@ -30,22 +30,23 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.2.0",
 		"svelte-check": "^3.5.0",
-		"svelte-kit-sst": "^2.24.4",
+		"svelte-kit-sst": "^2.24.11",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "^3.3.3",
 		"tailwindcss-animate": "^1.0.6",
 		"tailwindcss-brand-colors": "^0.3.3",
-		"tslib": "^2.6.1",
-		"typescript": "^5.0.0",
+		"tslib": "^2.6.2",
+		"typescript": "^5.1.6",
 		"vite": "^4.4.9"
 	},
 	"type": "module",
 	"dependencies": {
-		"@revelationsai/core": "*",
-		"@tanstack/svelte-query": "^4.32.6",
-		"ai": "^2.2.2",
+		"@revelationsai/core": "^1.0.0",
+		"@tanstack/svelte-query": "^4.33.0",
+		"ai": "^2.2.7",
 		"autosize": "^6.0.1",
 		"moment": "^2.29.4",
+		"stripe": "^13.2.0",
 		"svelte-intersection-observer": "^0.10.1",
 		"validator": "^13.11.0"
 	}
