--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@types/cfn-response": "^1.0.5",
     "@types/node": "^20.5.1",
     "@types/pg": "^8.10.2",
-    "aws-cdk-lib": "^2.92.0",
-    "constructs": "^10.2.69",
+    "aws-cdk-lib": "2.84.0",
+    "constructs": "10.1.156",
     "drizzle-kit": "^0.19.13",
-    "sst": "^2.24.12",
+    "sst": "2.22.10",
     "typescript": "^5.1.6"
   },
   "dependencies": {
