--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -13,9 +13,9 @@
     "@types/aws-lambda": "^8.10.119",
     "@types/bcryptjs": "^2.4.2",
     "@types/busboy": "^1.5.0",
-    "@types/node": "^20.5.1",
+    "@types/node": "^20.5.2",
     "@types/nodemailer": "^6.4.9",
-    "sst": "^2.22.10",
+    "sst": "2.24.12",
     "vitest": "^0.33.0"
   },
   "dependencies": {
