--- a/.github/workflows/pr-preview-cleanup.yaml
+++ b/.github/workflows/pr-preview-cleanup.yaml
@@ -60,9 +60,12 @@ jobs:
         with:
           node-version: "18.x"
           cache: "npm"
-      - id: install_node_deps
-        name: Install Node.js dependencies
-        run: npm ci
+      - id: setup_pnpm
+        name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: latest
+          run_install: true
       - id: sst_remove
         name: Remove SST deployment
-        run: npx sst remove --stage pr-${{ github.event.pull_request.number }}
+        run: pnpm sst remove --stage pr-${{ github.event.pull_request.number }}
