Converting to postgres-js usage for more consistency

--- a/packages/functions/tsconfig.json
+++ b/packages/functions/tsconfig.json
@@ -4,6 +4,7 @@
     "typeRoots": ["./src/types", "../core/src/types"],
     "lib": ["dom", "dom.iterable", "ES2021"],
     "moduleResolution": "Node",
+    "allowSyntheticDefaultImports": true,
     "paths": {
       "@core/configs": ["../core/src/configs"],
       "@core/configs/*": ["../core/src/configs/*"],
