--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "langchain": "^0.0.132",
     "neon-sdk": "^1.10.0",
     "pg": "^8.11.3",
+    "postgres": "^3.3.5",
     "replicate": "^0.16.1",
     "zod": "^3.22.2"
   },
