--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "exclude": ["packages", "node_modules"],
   "compilerOptions": {
     "moduleResolution": "Node",
+    "strict": false,
     "paths": {
       "@stacks/*": ["./stacks/*"],
       "@stacks": ["./stacks"]
