--- a/packages/functions/tsconfig.json
+++ b/packages/functions/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["dom", "dom.iterable", "ES2021"],
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
-    "strict": false,
+    "strict": false, // Not strict to prevent errors in drizzle-orm
     "paths": {
       "@core/configs": ["../core/src/configs"],
       "@core/configs/*": ["../core/src/configs/*"],
