--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@tsconfig/node16": "^16.1.1",
+    "@tsconfig/node18": "^18.2.1",
     "@types/cfn-response": "^1.0.5",
     "@types/node": "^20.5.2",
     "@types/pg": "^8.10.2",
