--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "typeRoots": ["./src/types"],
     "moduleResolution": "Node",
-    "strict": false // Not strict to prevent errors in drizzle-orm
+    "strictFunctionTypes": false
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules"]
