--- a/packages/functions/tsconfig.json
+++ b/packages/functions/tsconfig.json
@@ -1,11 +1,11 @@
 {
-  "extends": "@tsconfig/node16/tsconfig.json",
+  "extends": "@tsconfig/node18/tsconfig.json",
   "compilerOptions": {
     "typeRoots": ["./src/types", "../core/src/types"],
     "lib": ["dom", "dom.iterable", "ES2021"],
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
-    "strict": false, // Not strict to prevent errors in drizzle-orm
+    "strictFunctionTypes": false,
     "paths": {
       "@core/configs": ["../core/src/configs"],
       "@core/configs/*": ["../core/src/configs/*"],
