--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -30,6 +30,7 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.2.0",
 		"svelte-check": "^3.5.0",
+		"svelte-copy": "^1.4.1",
 		"svelte-kit-sst": "2.24.12",
 		"svelte-share-buttons-component": "^1.5.5",
 		"tailwind-merge": "^1.14.0",
