--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -25,12 +25,15 @@
 		"eslint": "^8.47.0",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-svelte": "^2.33.0",
+		"flowbite": "^1.8.1",
+		"flowbite-svelte": "^0.44.4",
 		"postcss": "^8.4.28",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.2.0",
 		"svelte-check": "^3.5.0",
 		"svelte-copy": "^1.4.1",
+		"svelte-intersection-observer": "^0.10.1",
 		"svelte-kit-sst": "2.24.12",
 		"svelte-share-buttons-component": "^1.5.5",
 		"tailwind-merge": "^1.14.0",
@@ -47,10 +50,8 @@
 		"@tanstack/svelte-query": "^4.33.0",
 		"ai": "^2.2.7",
 		"autosize": "^6.0.1",
-		"flowbite-svelte": "^0.44.4",
 		"moment": "^2.29.4",
 		"stripe": "^13.2.0",
-		"svelte-intersection-observer": "^0.10.1",
 		"validator": "^13.11.0"
 	}
 }
