--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -22,11 +22,10 @@
 		"autoprefixer": "^10.4.15",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
+		"daisyui": "^3.6.1",
 		"eslint": "^8.47.0",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-svelte": "^2.33.0",
-		"flowbite": "^1.8.1",
-		"flowbite-svelte": "^0.44.4",
 		"postcss": "^8.4.28",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
