Final tweaks, updating deps, no more drizzle issue

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "@tsconfig/node18/tsconfig.json",
   "compilerOptions": {
     "typeRoots": ["./src/types"],
-    "moduleResolution": "Node",
-    "strictFunctionTypes": false
+    "moduleResolution": "Node"
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules"]
