--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -16,6 +16,7 @@
     "@expo-google-fonts/catamaran": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@revelationsai/core": "*",
     "expo": "~49.0.8",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
@@ -36,6 +37,8 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "autoprefixer": "^10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "daisyui": "^3.6.3",
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
