--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -35,10 +35,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   hexcolor: ^3.0.1
-  go_router: ^10.1.2
   hooks_riverpod: ^2.3.10
   flutter_hooks: ^0.20.1
   riverpod_annotation: ^2.1.4
+  freezed: ^2.4.2
+  json_annotation: ^4.8.1
+  http: ^1.1.0
+  flutter_config: ^2.0.2
+  go_router: ^10.1.2
+  shared_preferences: ^2.2.1
+  analyzer: ^6.2.0
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +60,7 @@ dev_dependencies:
   build_runner: ^2.4.6
   custom_lint: ^0.5.3
   riverpod_lint: ^2.0.3
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
