--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   go_router: ^10.1.2
   shared_preferences: ^2.2.1
   analyzer: ^6.2.0
+  intl: ^0.18.1
+  url_launcher: ^6.1.14
 
 dev_dependencies:
   flutter_test:
