--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   analyzer: ^6.2.0
   intl: ^0.18.1
   url_launcher: ^6.1.14
+  nanoid: ^1.0.0
+  uuid: ^3.0.7
+  font_awesome_flutter: ^10.5.0
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
